additions/bnfGrammar.ebnf
prog ::= decl_list 'EOF'

/* Declaraciones */

decl_list ::= /* epsilon */
    | (class_decl | decl) decl_list

simple_decl_list ::= /* epsilon */
    | decl simple_decl_list

decl ::= 'ID' ':' (type_simple | type_array_sized | type_func) ';'
    | decl_init

decl_init ::= 'ID' ':' type_simple '=' expr ';'
    | 'ID' ':' type_array_sized '=' '[' opt_expr_list ']' ';'
    | 'ID' ':' type_func '=' '{' opt_stmt_list '}'

class_decl ::= 'ID' ':' 'CLASS' ('EXTENDS' 'ID')? '=' '{' simple_decl_list '}'

/* Sentencias */

opt_stmt_list ::= /* epsilon */
    | stmt_list

stmt_list ::= stmt
    | stmt stmt_list

stmt ::= open_stmt
    | closed_stmt

closed_stmt ::= if_stmt_closed
    | for_stmt_closed
    | while_stmt_closed
    | simple_stmt

open_stmt ::= if_stmt_open
    | for_stmt_open
    | while_stmt_open

if_cond ::= 'IF' '(' expr ')'

if_stmt_closed ::= if_cond closed_stmt 'ELSE' closed_stmt

if_stmt_open ::= if_cond stmt
    | if_cond closed_stmt 'ELSE' if_stmt_open

for_header ::= 'FOR' '(' opt_expr ';' opt_expr ';' opt_expr ')'

for_stmt_open ::= for_header open_stmt

for_stmt_closed ::= for_header closed_stmt

while_stmt_open ::= 'WHILE' '(' expr ')' open_stmt

while_stmt_closed ::= 'WHILE' '(' expr ')' closed_stmt

/* Las sentencias simples no son recursivas */

simple_stmt ::= print_stmt
    | return_stmt
    | block_stmt
    | ('BREAK' | 'CONTINUE')
    | decl
    | expr ';'

print_stmt ::= 'PRINT' opt_expr_list ';'

return_stmt ::= 'RETURN' opt_expr ';'

block_stmt ::= '{' stmt_list '}'

/* Expresiones */

opt_expr_list ::= /* epsilon */
    | expr_list

expr_list ::= expr
    | expr ',' expr_list

opt_expr ::= /* epsilon */
    | expr

expr ::= lval assign_op expr // asignación
    | expr2

lval ::= 'ID' index_list?

index_list ::= index index_list?

index ::= '[' expr ']'

assign_op ::= '=' | '+=' | '-=' | '*=' | '/=' | '%='

expr2 ::= expr2 'LOR' expr3 // or
    | expr3

expr3 ::= expr3 'LAND' expr4 // and
    | expr4

expr4 ::= expr4 comp_op expr5 // comparaciones
    | expr5

comp_op ::= 'EQ' | 'NE' | 'LT' | 'LE' | 'GT' | 'GE'

expr5 ::= expr5 ('+' | '-') expr6 // sumas y restas
    | expr6

expr6 ::= expr6 ('*' | '/' | '%') expr7 // multiplicación, división y módulo
    | expr7

expr7 ::= expr7 '^' expr8 // Potencia
    | expr8

expr8 ::= ('-' | 'NOT') expr8 // negativo y negación
    | expr9

expr9 ::= ternary_expr // Ternario
    | 'ID' index_list // arreglo indexado
    | incdec_expr // Incremento y decremento
    | 'ID' '.' ('ID' | func_call) // atributos y métodos de clases
    | group

ternary_expr ::= expr '?' expr ':' expr

incdec_expr ::= 'ID' incdec_op
    | incdec_op 'ID'

incdec_op ::= '++' | '--'

func_call ::= 'ID' '(' opt_expr_list ')'

group ::= '(' expr ')' // paréntesis
    | 'NEW'? func_call // nueva instancia de una clase o llamada de una función
    | factor // literales

factor ::= 'ID'
    | 'INTEGER_LITERAL'
    | 'FLOAT_LITERAL'
    | 'CHAR_LITERAL'
    | 'STRING_LITERAL'
    | 'TRUE'
    | 'FALSE'

/* Types */

type_simple ::= 'INTEGER'
    | 'FLOAT'
    | 'BOOLEAN'
    | 'CHAR'
    | 'STRING'
    | 'ID'
    | 'VOID'

type_array ::= 'ARRAY' '[' ']' (type_simple | type_array)

type_array_sized ::= 'ARRAY' index_list (type_simple | type_array_sized)

type_func ::= 'FUNCTION' (type_simple | type_array_sized) '(' opt_param_list ')'

/* Parámetros */

opt_param_list ::= /* epsilon */
    | param_list

param_list ::= param
    | param_list ',' param

param ::= 'ID' ':' (type_simple | type_array | type_array_sized)
